Fixed spacing to left of drop arrow

--- a/framework.less
+++ b/framework.less
@@ -217,7 +217,7 @@ input[type="text"]
         { 
             content:'';
             display: inline-block;
-            margin-left: 0.254999;
+            margin-left: 0.25em;
             vertical-align: .1em;
             border-top: 0.3em solid;
             border-right: 0.3em solid transparent;
